--- a/TeamThree/pyproject.toml
+++ b/TeamThree/pyproject.toml
@@ -8,5 +8,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "numpy>=2.2.3",
     "pandas>=2.2.3",
+    "scipy>=1.15.2",
+    "sqlalchemy>=2.0.38",
     "torch>=2.6.0",
 ]
